--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,22 +2,30 @@ workflows:
   ios-debug:
     name: iOS debug build (patch AR engine)
     environment:
-      flutter: stable
+      flutter: stable         # or pin: 3.22.x, etc.
       xcode: latest
 
     scripts:
+      # 1️⃣ Clean & get Flutter packages
       - name: Flutter clean & pub get
         script: |
           flutter clean
           flutter pub get
 
+      # 2️⃣ 🩹  Create podspec for ar_flutter_plugin_engine
       - name: Patch ar_flutter_plugin_engine podspec
         script: |
-          PLUGIN_DIR="ios/.symlinks/plugins/ar_flutter_plugin_engine/ios"
-          mkdir -p "$PLUGIN_DIR"
-          PODSPEC="$PLUGIN_DIR/ar_flutter_plugin_engine.podspec"
+          set -e
 
-          if [ ! -f "$PODSPEC" ]; then
+          # ----- locate pub-cache copy of the plugin -----
+          CACHE_DIR=$(find "$HOME/.pub-cache" -type d -name "ar_flutter_plugin_engine-*" | head -n 1)
+          echo "Plugin cache dir: $CACHE_DIR"
+          mkdir -p "$CACHE_DIR/ios"
+
+          PODSPEC_PATH="$CACHE_DIR/ios/ar_flutter_plugin_engine.podspec"
+
+          # ----- write podspec only once -----
+          if [ ! -f "$PODSPEC_PATH" ]; then
             printf '%s\n' \
               "Pod::Spec.new do |s|" \
               "  s.name    = 'ar_flutter_plugin_engine'" \
@@ -31,15 +39,22 @@ workflows:
               "  s.public_header_files = 'Classes/**/*.h'" \
               "  s.dependency 'Flutter'" \
               "  s.platform = :ios, '12.0'" \
-              "end" > "$PODSPEC"
+              "end" > "$PODSPEC_PATH"
           fi
 
+          # ----- copy into .symlinks folder (rebuilt by Flutter) -----
+          SYMLINK_DIR="ios/.symlinks/plugins/ar_flutter_plugin_engine/ios"
+          mkdir -p "$SYMLINK_DIR"
+          cp -f "$PODSPEC_PATH" "$SYMLINK_DIR/"
+
+      # 3️⃣ CocoaPods install
       - name: CocoaPods install
         script: |
           cd ios
           pod install --repo-update
           cd ..
 
+      # 4️⃣ Build (no codesign in CI)
       - name: Flutter build iOS (debug, no-codesign)
         script: |
           flutter build ios --debug --no-codesign
