--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,59 +6,67 @@ workflows:
       xcode: latest
 
     scripts:
-      # 1️⃣ Clean & fetch packages
+      # 1️⃣ Clean & get packages
       - name: Flutter clean & pub get
         script: |
           flutter clean
           flutter pub get
 
-      # 2️⃣ Ensure the Podfile adds GLTFSceneKit
-      - name: Inject GLTFSceneKit pod
+      # 2️⃣ Ensure Podfile declares the extra pods
+      - name: Inject required pods into Podfile
         script: |
-          PODFILE_PATH="ios/Podfile"
-          if ! grep -q "pod 'GLTFSceneKit'" "$PODFILE_PATH"; then
-            echo "Adding pod 'GLTFSceneKit' to Podfile"
-            awk '/target .Runner./ && c==0 {print "  pod '\''GLTFSceneKit'\''"; c=1}1' "$PODFILE_PATH" > "$PODFILE_PATH.tmp"
-            mv "$PODFILE_PATH.tmp" "$PODFILE_PATH"
-          fi
+          PODFILE=ios/Podfile
+          add_pod() {
+            local POD="$1"
+            if ! grep -q "pod '$POD'" "$PODFILE"; then
+              echo "Adding pod '$POD' to Podfile"
+              awk "/target 'Runner'/ && !x {print \"  pod '$POD'\"; x=1}1" "$PODFILE" > "$PODFILE.tmp"
+              mv "$PODFILE.tmp" "$PODFILE"
+            fi
+          }
+          add_pod "GLTFSceneKit"
+          add_pod "ARCoreCloudAnchors"
 
-      # 3️⃣ 🩹  Create podspec for ar_flutter_plugin_engine (with dependency)
+      # 3️⃣ Build a podspec for ar_flutter_plugin_engine with its deps
       - name: Patch ar_flutter_plugin_engine podspec
         script: |
           set -e
           CACHE_DIR=$(find "$HOME/.pub-cache" -type d -name "ar_flutter_plugin_engine-*" | head -n 1)
+          echo "Plugin cache dir: $CACHE_DIR"
           mkdir -p "$CACHE_DIR/ios"
+
           PODSPEC_PATH="$CACHE_DIR/ios/ar_flutter_plugin_engine.podspec"
-          if [ ! -f "$PODSPEC_PATH" ]; then
-            printf '%s\n' \
-              "Pod::Spec.new do |s|" \
-              "  s.name    = 'ar_flutter_plugin_engine'" \
-              "  s.version = '1.0.1'" \
-              "  s.summary = 'ARKit/ARCore Flutter plugin (engine fork)'" \
-              "  s.homepage= 'https://pub.dev/packages/ar_flutter_plugin_engine'" \
-              "  s.license = { :type => 'MIT' }" \
-              "  s.author  = { :name => 'Community' }" \
-              "  s.source  = { :path => '.' }" \
-              "  s.source_files = 'Classes/**/*.{h,m,mm,swift}'" \
-              "  s.public_header_files = 'Classes/**/*.h'" \
-              "  s.dependency 'Flutter'" \
-              "  s.dependency 'GLTFSceneKit'" \
-              "  s.platform = :ios, '12.0'" \
-              "end" > "$PODSPEC_PATH"
-          fi
-          # copy into .symlinks, which podhelper will recreate
+          printf '%s\n' \
+            "Pod::Spec.new do |s|" \
+            "  s.name         = 'ar_flutter_plugin_engine'" \
+            "  s.version      = '1.0.1'" \
+            "  s.summary      = 'ARKit/ARCore Flutter plugin (engine fork)'" \
+            "  s.homepage     = 'https://pub.dev/packages/ar_flutter_plugin_engine'" \
+            "  s.license      = { :type => 'MIT' }" \
+            "  s.author       = { :name => 'Community' }" \
+            "  s.source       = { :path => '.' }" \
+            "  s.source_files = 'Classes/**/*.{h,m,mm,swift}'" \
+            "  s.public_header_files = 'Classes/**/*.h'" \
+            "  s.dependency   'Flutter'" \
+            "  s.dependency   'GLTFSceneKit'" \
+            "  s.dependency   'ARCoreCloudAnchors'" \
+            "  s.frameworks   = 'ARKit', 'SceneKit'" \
+            "  s.platform     = :ios, '12.0'" \
+            "end" > "$PODSPEC_PATH"
+
+          # Also copy into the symlink CocoaPods scans
           SYMLINK_DIR="ios/.symlinks/plugins/ar_flutter_plugin_engine/ios"
           mkdir -p "$SYMLINK_DIR"
           cp -f "$PODSPEC_PATH" "$SYMLINK_DIR/"
 
-      # 4️⃣ CocoaPods install
+      # 4️⃣ Install CocoaPods deps
       - name: CocoaPods install
         script: |
           cd ios
           pod install --repo-update
           cd ..
 
-      # 5️⃣ Build (no codesign)
+      # 5️⃣ Build (debug, no codesign)
       - name: Flutter build iOS (debug, no-codesign)
         script: |
           flutter build ios --debug --no-codesign
